fleshed out andrewsproj function so that it use the plotdata function in a few different ways
added a default param to each get data function in CryptoStats so that you can get new dicts of data even if you have already made one and it wont
interfere with the currently existing one

4/24/18
updated cryptoevaluator to use global data variables and not rely on the global variables for cryptostat
made sure all the logic gates with decrease or increase are treated as the positive or negative as intended in cryptoevaluator
replaced value with more descriptive name in iterations of priceSymbols in all files

4/25/18
fixed some line estimation calculations in cryptographs
added estimation of yvalues for a dataframe using the estimated lines calculated for the data
can now plot an estimated line fit on a piece of data or use another one that has already been calculated
serparated the plotting functions in cryptographs so that they only need parameters relevant to them

4/26/18
added functions to calculate the estimated probabilities for an exponentially distributed set of data
added functions to calculate the exponential cdf and pdf
added a function to calculate chisquare and the p-value
bar charts now show all the bar names
plotbar will now do histograms

4/27/18
added equality testing for means of samples
added in ttest for pairs
fixed label rearranging issue for the bar charts

5/12/18
new file PseudoAPI-Datastream retrieves the new data to be stored every minute for all the cryptos
added a function to prime each database with 2 hours of info
added a function to open a connection with a set of databases passed
added a function to close the connections you pass
implemented relative paths for all files

5/13/18
tables for each kind of data created in the pseudoapi database
functions to add rows of data to each table created
function to prime the database with 2 hours of each data type added
removed CTRBTC from all files now that it is delisted